update link listeActu & OneActu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -39,7 +39,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <p class="backHome">
-                                        <a href="index">Retourner à la page d'accueil</a>
+                                        <a href="{{ path('accueil') ~ '#ancreActu'}}">Retourner à la page d'accueil</a>
                                     </p>
                                 </div>
                                 <div class="col-lg-6">
