--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <a class="linkYT" target="_blank" href="https://www.youtube.com/channel/UCj_DmGMNzw3DTMUMyYoyoyQ">Voir la vidéo sur youtube</a>
+                    <a class="linkYT" target="_blank" href="https://www.youtube.com/watch?v=Svd4SGOJTfI">Voir la vidéo sur youtube</a>
                 </div>
             </div>
         </div>
