--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -2,17 +2,18 @@
     background-image: url(../image/game-image-opaque.jpg);;
     background-attachment: fixed;
     background-size: cover;
-    height: 60%;
     width: 100%;
+    margin-top: 5%;
 }
 
 .textImage1 {
     font-style: italic;
     font-family: 'DIN';
     text-align: center;
-    margin-top: 4%;
-    font-size: 400%;
+    margin: auto;
+    font-size: 250%;
     color: #000;
+    padding: 0px;
 }
 
 .guillemets1 {
