--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -1,5 +1,5 @@
 .sectionImage1 {
-    background-image: url(../image/game-image-opaque.jpg);;
+    background-image: url(../image/game-image-opaque.jpg);
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
@@ -11,9 +11,9 @@
     font-family: 'DIN';
     text-align: center;
     margin: auto;
-    font-size: 250%;
+    font-size: 300%;
     color: #000;
-    padding: 0px;
+    margin-top: 5%;
 }
 
 .guillemets1 {
@@ -47,6 +47,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .sectionImage1 {
         background-attachment: scroll;
     }
+    .textImage1 {
+        font-size: 200%;
+    }
 }
 
 /*Suppression image fixe pour ipad 1&2*/
@@ -56,6 +59,9 @@ and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 1){
     .sectionImage1 {
         background-attachment: scroll;
+    }
+    .textImage1 {
+        font-size: 200%;
     }
 }
 
@@ -81,7 +87,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
         background-attachment: scroll;
     }
     .textImage1 {
-        font-size: 200%;
+        font-size: 1500%;
     }
 }
 
