remove AppBundle & remove /index

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -9,8 +9,7 @@
 <div class="container-fluid">
     <!-- Section vidéo et description -->
     <div class="row">
-        <div class="col-lg-offset-1 col-md-offset-1 col-lg-5 col-md-5 col-sm-offset-2 col-xs-offset-2 col-sm-8
-        col-xs-8">
+        <div class="col-xs-offset-3 col-xs-6">
             <div class="center-block embed-responsive embed-responsive-4by3">
                     <video class="embed-responsive-item center-block" playsinline autoplay muted loop>
                         <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
@@ -22,8 +21,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-offset-1 col-md-offset-1 col-lg-5 col-md-5 col-sm-offset-1 col-xs-offset-1 col-sm-11
-        col-xs-11">
+        <div class="col-xs-12">
             <h3 class="titreProduit">Développez un nouveau thème de visite</h3><br/>
             <p class="txtGeo">
                 Territoire, ville, monument, lieu de visite...
