--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -40,14 +40,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-xs-6">
                         <p class="backAccueil">
-                            <a href=" {{ path('accueil') }}">Retourner sur la page d'accueil</a>
+                            <a href=" {{ path('accueil') ~ '#ancreActu'}}">Retourner à la section actualités</a>
                         </p>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-xs-6">
                         <p class="back">
-                            <a href=" {{ path('liste_actu') ~ '#' ~ actu.id }}">Retourner à la liste d'actualités</a>
+                            <a href=" {{ path('liste_actu') ~ '#' ~ actu.id }}">Retourner à la liste des actualités</a>
                         </p>
                     </div>
                 </div>
